added some model stuff

--- a/writing/Cubert/greg.bib
+++ b/writing/Cubert/greg.bib
@@ -2,12 +2,32 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2015-01-22 10:42:55 -0800 
+%% Created for Greg Scontras at 2015-02-19 11:46:51 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{kaoetal2014,
+	Author = {Justine T Kao and Jean Y Wu and Leon Bergen and Noah D. Goodman},
+	Date-Added = {2015-02-19 19:44:13 +0000},
+	Date-Modified = {2015-02-19 19:46:10 +0000},
+	Journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	Pages = {12002-12007},
+	Title = {Non-literal understanding of number words},
+	Volume = {111},
+	Year = {2014}}
+
+@incollection{bergenetal2012,
+	Address = {Wheat Ridge, CO},
+	Author = {Leon Bergen and Noah D. Goodman and Roger Levy},
+	Booktitle = {Proceedings of the Thirty-Fourth Annual Conference of the {C}ognitive {S}cience {S}ociety},
+	Date-Added = {2015-02-19 19:41:56 +0000},
+	Date-Modified = {2015-02-19 19:46:51 +0000},
+	Publisher = {Cognitive Science Society},
+	Title = {That's what she (could have) said: How alternative utterances affect language use},
+	Year = {2012}}
 
 @unpublished{batesetal2014,
 	Author = {Douglas Bates and Martin Maechler and Benjamin M. Bolker and Steven Walker},
