more discussion of lvRSA

--- a/writing/Cubert/Cubert manuscript.tex
+++ b/writing/Cubert/Cubert manuscript.tex
@@ -112,7 +112,7 @@ Understanding why (and whether) stubbornly distributive predicates like \emph{bi
 
 To address the question of how much plural predication depends on context, and in what way, we establish a way of studying plural predication experimentally. In Expt.~1, we introduce and validate a new paraphrase methodology, which probes possible interpretations with unambiguous paraphrases. The results of Expt.~1 demonstrate a difference between \emph{big} and \emph{heavy}, as expected, but show that the predicate \emph{tall} patterns with \emph{heavy} in its ability to yield collective interpretations, at least in our experimental setting. We take these findings as evidence that stubborn distributivity cannot be reduced simply to predicating properties of physical extent.
 
-We then explore the idea that contextual predictability of the relevant collective property is a critical factor in determining which reading is used. Expt.~2 uses the paraphrase endorsement methodology to show that less variable contexts make collective interpretations more acceptable for all of the predicates tested. Finally, we discuss the role of contextual predictability and goal-oriented behavior under a pragmatic account of ambiguity resolution in plural predication, using a lifted-variable variant of a Bayesian Rational Speech Acts model to formalize the process \citep{frankgoodman2012,lassitergoodman2013}.
+We then explore the idea that contextual predictability of the relevant collective property is a critical factor in determining which reading is used. Expt.~2 uses the paraphrase endorsement methodology to show that less variable contexts make collective interpretations more acceptable for all of the predicates tested. Finally, we discuss the role of contextual predictability and goal-oriented behavior under a pragmatic account of ambiguity resolution in plural predication, using a lifted-variable variant of a Bayesian Rational Speech Act model to formalize the process \citep{frankgoodman2012,lassitergoodman2013}.
 
 But first, a primer on the semantics of plural predication writ broad, and then some background on gradable predicates and stubborn distributivity specifically.
 
@@ -532,31 +532,31 @@ As Fig.~\ref{resultsexpt2} demonstrates, \textsc{context} interacted with \texts
 
 \subsubsection{Discussion}
 
-For each predicate, regular contexts had higher ratings for collective paraphrases and lower ratings for distributive. The predicate \textit{tall} was most affected by our contextual manipulation, which directly targeted the height dimension, stacking boxes on top of each other. Our results demonstrate the central role of context in plural predication: as collective properties become more predictable, collective interpretations become more viable, regardless of the predicate involved. Next, we formalize this choice of interpretation in a Bayesian Rational Speech Acts model \citep{frankgoodman2012,lassitergoodman2013}: noisy interpretations are less useful because they require more coordination between speakers and listeners; they are therefore less likely.
+For each predicate, regular contexts had higher ratings for collective paraphrases and lower ratings for distributive. The predicate \textit{tall} was most affected by our contextual manipulation, which directly targeted the height dimension, stacking boxes on top of each other. Our results demonstrate the central role of context in plural predication: as collective properties become more predictable, collective interpretations become more viable, regardless of the predicate involved. Next, we formalize this choice of interpretation in a Bayesian Rational Speech Act model \citep{frankgoodman2012,lassitergoodman2013}: noisy interpretations are less useful because they require more coordination between speakers and listeners; they are therefore less likely.
 
 It bears noting that we also replicated the scenario manipulation effect for \emph{heavy}: regardless of the regularity of context, scenarios in which boxes are ``moved'' received lower ratings for distributive paraphrases. In fact, with \emph{heavy}, scenario goals were better predictors of interpretation than the regularity of context. Returning to the source of this effect, the relatively high rates of distributive interpretations for \emph{heavy} in ``inspect'' scenarios suggests that having Cubert consider individual boxes increases the relevance of their individual properties, yielding higher rates of distributive interpretations. That our context manipulation was so ineffective for \textit{heavy} should come as no surprise. Collective weight is a maximally stable (and thus predictable) property: there is only one way to evaluate it, and the property persists despite changing physical arrangement. We have little hope of increasing the contextual predictability of a property that is already maximally stable, which accounts for the relative insensitivity of \emph{heavy} to our contextual manipulation. We can, however, make distributive interpretations more relevant and useful by having contextual goals highlight properties of individual objects, as was the case in our scenario manipulation.
 
 
 \section{Modeling plural predication}
 
-We have seen that disambiguating plural predication depends not only on local linguistic context (i.e., the predicate, its subject, and any disambiguating particles), but also on the broader discourse context. Moreover, we showed how properties of the broader context stand to explain the effect certain predicates have on disambiguating plural predication: Complaisantly collective predicates like \emph{heavy} name collective properties that are stable and predictable on the basis of context; stubbornly distributive predicates like \emph{big} name collective properties that are unstable and unpredictable on the basis of context. The less predictable the collective property, the noisier the collective interpretation. A noisy interpretation is less useful, and therefore less likely. To formalize the effect of contextual predictability and interpretation noise in plural predication, we adopt a lifted variable variant of the Bayesian Rational Speech Acts model.
+We have seen that disambiguating plural predication depends not only on local linguistic context (i.e., the predicate, its subject, and any disambiguating particles), but also on the broader discourse context. Moreover, we showed how properties of the broader context stand to explain the effect certain predicates have on disambiguating plural predication: Complaisantly collective predicates like \emph{heavy} name collective properties that are stable and predictable on the basis of context; stubbornly distributive predicates like \emph{big} name collective properties that are unstable and unpredictable on the basis of context. The less predictable the collective property, the noisier the collective interpretation. A noisy interpretation is less useful at communicating its intended message, and therefore less likely. To formalize the effect of contextual predictability and interpretation noise in plural predication, we adopt a lifted variable variant of the Bayesian Rational Speech Act model.
 
-The Rational Speech Acts (RSA) framework views communication as recursive reasoning between a speaker and a listener. The listener interprets the speaker's utterance by reasoning about a cooperative speaker trying to inform a naive listener about some state of affairs. Using Bayesian inference, the listener infers what the state of the world is likely to be given that a speaker produced some utterance, knowing that the speaker is reasoning about how a listener is most likely to interpret that utterance. Thus, we have at least three levels of inference. At the top, the pragmatic listener, \emph{L}$_{1}$, reasons about the speaker, \emph{S}$_{1}$, and infers the state of the world \emph{s} given that the speaker chose to produce the utterance \emph{u}. The speaker chooses \emph{u} by maximizing the likelihood that a naive listener, \emph{L}$_{0}$, would correctly infer the state of the world \emph{s} given the literal meaning of \emph{u}.
+The Rational Speech Act (RSA) framework views communication as recursive reasoning between a speaker and a listener. The listener interprets the speaker's utterance by reasoning about a cooperative speaker trying to inform a naive listener about some state of affairs. Using Bayesian inference, the listener infers what the state of the world is likely to be given that a speaker produced some utterance, knowing that the speaker is reasoning about how a listener is most likely to interpret that utterance. Thus, we have at least three levels of inference. At the top, the pragmatic listener, \emph{L}$_{1}$, reasons about the speaker, \emph{S}$_{1}$, and infers the state of the world \emph{s} given that the speaker chose to produce the utterance \emph{u}. The speaker chooses \emph{u} by maximizing the likelihood that a naive listener, \emph{L}$_{0}$, would correctly infer the state of the world \emph{s} given the literal meaning of \emph{u}.
 
-In more detail, the pragmatic listener \emph{L}$_{1}$ computes the probability of a state \emph{s} given some utterance \emph{u}. By reasoning about the speaker \emph{S}$_{1}$, this probability is proportional to the probability that \emph{S}$_{1}$ would choose to utter \emph{u} to communicate about the state \emph{s}, together with the likelihood of \emph{s} itself.
+In more detail, the pragmatic listener \emph{L}$_{1}$ computes the probability of a state \emph{s} given some utterance \emph{u}. By reasoning about the speaker \emph{S}$_{1}$, this probability is proportional to the probability that \emph{S}$_{1}$ would choose to utter \emph{u} to communicate about the state \emph{s}, together with the prior probability of \emph{s} itself.
 
 \ex. \emph{The pragmatic listener}:\\
 $P_{L_{1}}(s|u) \propto P_{S_{1}}(u|s) \cdot P(s)$
 
-The speaker \emph{S}$_{1}$ wants to choose an utterance \emph{u} that would most effectively communicate some state \emph{s} to a hypothesized literal listener \emph{L}$_{0}$. In other words, \emph{S}$_{1}$ wants to minimize the effort \emph{L}$_{0}$ would need to arrive at \emph{s} from \emph{u}, all while being efficient at communicating. \emph{S}$_{1}$ thus seeks to minimize the surprisal of \emph{s} given \emph{u} for the literal listener \emph{L}$_{0}$, while bearing in mind the utterance cost, \emph{C}(\emph{u}). In \Next, we formalize the speaker's utility function \emph{U}$_{S_{1}}$: utterances are more useful at communicating about some state as surprisal and utterance cost decrease.
+The speaker \emph{S}$_{1}$ wants to choose an utterance \emph{u} that would most effectively communicate some state \emph{s} to a hypothesized literal listener \emph{L}$_{0}$. In other words, \emph{S}$_{1}$ wants to minimize the effort \emph{L}$_{0}$ would need to arrive at \emph{s} from \emph{u}, all while being efficient at communicating. \emph{S}$_{1}$ thus seeks to minimize the surprisal of \emph{s} given \emph{u} for the literal listener \emph{L}$_{0}$, while bearing in mind the utterance cost, \emph{C}(\emph{u}). In \Next, we formalize the speaker's utility function \emph{U}$_{S_{1}}$: Utterances are more useful at communicating about some state as surprisal and utterance cost decrease.
 
 \ex. \emph{The speaker's utility function}:\\
 $U_{S_{1}}(u|s) = \textrm{log}L_{0}(s|u) - C(u)$
 
-With this utility function in mind, $S_{1}$ computes the probability of an utterance $u$ given some state $s$ in proportion to the speaker's utility function. The term $\lambda$ controls the speaker's optimality, that is, the speaker's rationality in choosing utterances.
+With this utility function in mind, $S_{1}$ computes the probability of an utterance $u$ given some state $s$ in proportion to the speaker's utility function. The term $\alpha > 0$ controls the speaker's optimality, that is, the speaker's rationality in choosing utterances.
 
 \ex. \emph{The pragmatic speaker}:\\
-$P_{S_{1}}(u|s) \propto \textrm{exp}(\lambda\textrm{ln}P_{L_{0}}(s|u))$
+$P_{S_{1}}(u|s) \propto \textrm{exp}(\alpha\textrm{ln}P_{L_{0}}(s|u))$
 
 The naive, or literal listener $L_{0}$ interprets an utterance according to its meaning. That is, $L_{0}$ computes the likelihood of $s$ given $u$ according to the semantics of $u$ and the prior probability of $s$.
 
@@ -571,7 +571,7 @@ Within the RSA framework, communication is thus modeled as in Fig.~\ref{RSA}, wh
 		\psset{arrows=->,rowsep=10pt,colsep=10pt,nodesep=2pt} \begin{psmatrix}
 			\rnode[b]{l1}{$L_{1}$} & \emph{pragmatic listener} & $P_{L_{1}}(s|u) \propto P_{S_{1}}(u|s) \cdot P(s)$\\
 			\rnode[c]{s1}{$S_{1}$} & \emph{pragmatic speaker}
-			& $P_{S_{1}}(u|s) \propto \textrm{exp}(\lambda\textrm{ln}P_{L_{0}}(s|u))$ \\
+			& $P_{S_{1}}(u|s) \propto \textrm{exp}(\alpha\textrm{ln}P_{L_{0}}(s|u))$ \\
 			\rnode[t]{l0}{$L_{0}$} & \emph{literal listener} & $P_{L_{0}}(s|u) \propto \sem{u}(s) \cdot P(s)$
 			\ncline{l1}{s1} 
 			\ncline{s1}{l0} 
@@ -582,7 +582,26 @@ Within the RSA framework, communication is thus modeled as in Fig.~\ref{RSA}, wh
 \end{figure}
 
 
-To successfully model ambiguity resolution in plural predication, we need to adopt a variant of the RSA approach wherein speaker listeners reason not merely over utterances and meanings, but also over variables that contribute to those meanings. This sort of ``lifted variable'' RSA model has proven useful in accounts of adjective semantics (where the lifted variable is the adjective's degree threshold; \citealp{lassitergoodman2013}), specificity implicatures (where the lifted variable determines the choice of lexica; \citealp{bergenetal2012}), or non-literal meaning (XXX; \citealp{kaoetal2014}), to name just a few applications (see also XXX). Here, the lifted variably about which speakers and listeners reason determines the interpretation of an ambiguous plural predication: whether a predicate is interpreted collectively or distributively.
+To successfully model ambiguity resolution in plural predication, we need to adopt a variant of the RSA approach wherein speakers and listeners reason not merely over utterances and meanings, but also over variables that contribute to those meanings. This sort of ``lifted variable'' (also called ``lexical uncertainty'') RSA model has proven useful in accounts of adjective semantics (where the lifted variable is the adjective's degree threshold; \citealp{lassitergoodman2013}), specificity implicatures (where the lifted variable determines the choice of lexica; \citealp{bergenetal2012}), and non-literal meaning (where the lifted variable concerns the dimension along which the speaker intends to communicate; \citealp{kaoetal2014}), to name just a few applications (see also XXX). Here, the lifted variably about which speakers and listeners reason determines the interpretation of an ambiguous plural predication: whether an utterance is interpreted collectively or distributively.
+
+The ambiguity-resolving free variable $V$ determines the interpretation of an plural predication utterance $u$. When $V$ is \textsc{coll}, $u$ receives a collective interpretation; when $V$ is \textsc{dist}, $u$ receives a distributive interpretation. Now, the lifted variable literal listener $L_{0}$ computes the probability of some state $s$ given an utterance $u$ and some value for $V$. 
+
+\ex. \emph{The lifted variable literal listener}:\\
+$P_{L_{0}}(s|u,V) \propto \sem{u}^{V}(s) \cdot P(s) \cdot P(V)$
+
+But $L_{0}$ does not know the value of $V$. Put differently, the literal listener does not know the intended reading of an ambiguous utterance. The name "lifted variable RSA" captures the fact that this free variable gets passed up from the literal listener through the speaker to be estimated by the pragmatic listener.
+
+The lifted variable pragmatic speaker $S_{1}$ now incorporates $V$ so that utterances are chosen to best communicate some state $s$ given an interpretation $V$. $S_{1}$ maximizes the likelihood of $u$ given $s$ and $V$, relative to the speaker utility function which minimizes surprisal and the cost of $u$.
+
+\ex. \emph{The lifted variable pragmatic speaker}:\\
+$P_{S_{1}}(u|s,V) \propto \textrm{exp}(\alpha\textrm{ln}P_{L_{0}}(s|u,V))$
+
+At the top level, the lifted variable pragmatic listener $L_{1}$ interprets an utterance $u$, inferring the state $s$ and resolving the variable $V$. $L_{1}$ now reasons about the speaker, who presumably has an interpretation (i.e., a value for V) in mind.
+
+\ex. \emph{The lifted variable pragmatic listener}:\\
+$P_{L_{1}}(s|u,V) \propto P_{S_{1}}(u|s,V) \cdot P(s) \cdot P(V)$
+
+To summarize, the lifted variable RSA model of plural predication has the pragmatic listener resolve ambiguity while interpreting an utterance by reasoning about the pragmatic speaker, who chooses utterances most likely to communicate some state via a specific interpretation to a naive, literal listener.
 
 
 \section{General discussion}
