add speaker knowledge to manuscript

--- a/writing/Cubert/greg.bib
+++ b/writing/Cubert/greg.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2015-02-19 11:46:51 -0800 
+%% Created for Greg Scontras at 2015-04-06 10:09:54 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{syrett2015,
+	Author = {Kristen Syrett},
+	Booktitle = {{BUCLD} 39 Proceedings},
+	Date-Added = {2015-04-06 17:08:55 +0000},
+	Date-Modified = {2015-04-06 17:09:54 +0000},
+	Publisher = {Cascadilla Press},
+	Title = {Mapping Properties to Individuals in Language Acquisition},
+	Year = {2015}}
 
 @article{kaoetal2014,
 	Author = {Justine T Kao and Jean Y Wu and Leon Bergen and Noah D. Goodman},
